# vega-memory

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  CODEX.md  Dockerfile  README.ja.md  README.ko.md  README.md  README.zh-CN.md  current-status.md  docker-compose.yml  next-step.md  package-lock.json  package.json  task-prompt-bf01.md  task-prompt-bf02.md  task-prompt-bf03.md  task-prompt.md
.github/ISSUE_TEMPLATE/: stage.yml
.omc/: project-memory.json  vm2-001-prompt.md  vm2-002-prompt.md  vm2-003-prompt.md  vm2-004-prompt.md  vm2-005-prompt.md  vm2-006-prompt.md  vm2-007-prompt.md  vm2-008-prompt.md  vm2-009-prompt.md  vm2-010-prompt.md  vm2-011-prompt.md  vm2-012-prompt.md  vm2-013-prompt.md  vm2-014-prompt.md  vm2-015-prompt.md  vm2-016-prompt.md  vm2-017-prompt.md  vm2-018-prompt.md  vm2-019-prompt.md  vm2-023-prompt.md  vm2-024-prompt.md  vm2-025-prompt.md  vm2-026-prompt.md
client/: package.json  vega-remote-mcp.mjs
dashboards/: vega-runtime-core.json
docs/: API.md  adapter-guide.md  deployment.md  impact-model.md  sunset-registry.yaml  trial-feedback-playbook.md
launchd/: dev.vega-memory.plist
python-sdk/: README.md  pyproject.toml
python-sdk/src/vega_memory/: __init__.py  client.py
python-sdk/tests/: test_client.py
rules/: CLAUDE.md  CODEX.md  cursor-memory.mdc
scripts/: copy-web-public.mjs  generate-adapter-token-report.mjs  guard-contract-enum-change.mjs  prepare-glm-brief-eval.sh  prepare-kimi-brief-eval.sh  report-brief-eval-duration.sh  run-eslint-contracts-guard.sh  task-done.sh
src/: config.ts  index.ts
(+835 files in other folders)
